- Portfolio various updates, bugfixes and svg/img optimizations

--- a/public/head.html
+++ b/public/head.html
@@ -2,4 +2,5 @@
 <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="manifest" href="/site.webmanifest">
-<meta name="theme-color" content="#D4494C">
+<!-- <meta name="theme-color" content="#D4494C"> -->
+<meta name="theme-color" content="#b12a29">
