--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
-    <meta name="theme-color" content="#D4494C">
+    <meta name="theme-color" content="#b12a29">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>wenzie querubin</title>
