- add image ti meta tag property -image

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="My Personal Portfolio - Frontend Software Engineer specializing in ReactJS">
-    <meta name="keywords" content="ReactJS, frontend, software engineer, portfolio">
+    <meta name="keywords" content="ReactJS, frontend, software engineer, web developer, portfolio">
     <meta name="author" content="Wenzie Querubin">
+    <meta property="og:image" content="/public/img-banner.png">
 
     <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
     <link rel="icon" href="/favicon.ico" sizes="any">
