setup config for meta tag og:image

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My Personal Portfolio - Frontend Software Engineer specializing in ReactJS">
+    <meta name="description" content="Frontend Software Engineer specializing in ReactJS">
     <meta name="keywords" content="ReactJS, frontend, software engineer, web developer, portfolio">
     <meta name="author" content="Wenzie Querubin">
-    <meta property="og:image" content="/public/img-banner.png">
+    <!-- <meta property="og:image" href="/public/img-banner.png"> -->
+    <meta property="og:image" content="https://wenziequerubin.netlify.app/">
+    <meta property="og:type" content="website" />
 
     <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
     <link rel="icon" href="/favicon.ico" sizes="any">
