update meta og:image url

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="ReactJS, frontend, software engineer, web developer, portfolio">
     <meta name="author" content="Wenzie Querubin">
     <!-- <meta property="og:image" href="/public/img-banner.png"> -->
-    <meta property="og:image" content="https://wenziequerubin.netlify.app/">
+    <meta property="og:image" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689330400/wenziequerubin-portfolio-assets/img-banner_x4qzoo.png">
     <meta property="og:type" content="website" />
 
     <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
