--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Frontend Software Engineer specializing in ReactJS">
     <meta name="keywords" content="ReactJS, frontend, software engineer, web developer, portfolio">
     <meta name="author" content="Wenzie Querubin">
-    <!-- <meta property="og:image" href="/public/img-banner.png"> -->
     <meta property="og:image" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689330400/wenziequerubin-portfolio-assets/img-banner_x4qzoo.png">
+    <meta property="og:url" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689330400/wenziequerubin-portfolio-assets/img-banner_x4qzoo.png" />
     <meta property="og:type" content="website" />
 
     <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
