- update themes and colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#b12a29">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>wenzie querubin</title>
+    <title>Wenzie Querubin</title>
   </head>
   <body class="scrollbar-hide">
     <div id="root"></div>
