[experimental] - dynamic metatags

--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
     <meta name="author" content="Wenzie Querubin">
     <!-- <meta property="og:image" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689567401/wenziequerubin-portfolio-assets/img-link-banner_nqy6kz.png">
     <meta property="og:url" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689567401/wenziequerubin-portfolio-assets/img-link-banner_nqy6kz.png" /> -->
-    <meta property="og:type" content="website" />
     <!-- <meta name="theme-color" content="#b12a29"> -->
+    <meta property="og:type" content="website" />
 
-    <!-- <meta charset="UTF-8" />
+    <!-- 
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="" data-react-helmet="true">
     <meta name="keywords" content="ReactJS, frontend, software engineer, web developer, portfolio">
     <meta name="author" content="Wenzie Querubin">
     <meta property="og:image" content="" data-react-helmet="true">
-    <meta property="og:url" content="" data-react-helmet="true" />
     <meta property="og:type" content="website" />
-    <meta name="theme-color" content="" data-react-helmet="true"> -->
+    <meta name="theme-color" content="" data-react-helmet="true">
+    <meta property="og:url" content="" data-react-helmet="true" /> -->
+    
+    <meta property="og:image" content="" >
+    <meta property="og:url" content="" />
+    
 
     <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
     <link rel="icon" href="/favicon.ico" sizes="any">
