[experimental] - dynamic metatags

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Frontend Software Engineer specializing in ReactJS">
     <meta name="keywords" content="ReactJS, frontend, software engineer, web developer, portfolio">
     <meta name="author" content="Wenzie Querubin">
-    <!-- <meta property="og:image" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689567401/wenziequerubin-portfolio-assets/img-link-banner_nqy6kz.png">
+    <meta property="og:image" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689567401/wenziequerubin-portfolio-assets/img-link-banner_nqy6kz.png">
     <meta property="og:url" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689567401/wenziequerubin-portfolio-assets/img-link-banner_nqy6kz.png" /> -->
-    <!-- <meta name="theme-color" content="#b12a29"> -->
+    <meta name="theme-color" content="#b12a29">
     <meta property="og:type" content="website" />
 
     <!-- 
@@ -22,8 +22,8 @@
     <meta name="theme-color" content="" data-react-helmet="true">
     <meta property="og:url" content="" data-react-helmet="true" /> -->
     
-    <meta property="og:image" content="" >
-    <meta property="og:url" content="" />
+    <!-- <meta property="og:image" content="" data-rh="true">
+    <meta property="og:url" content="" data-rh="true"/> -->
     
 
     <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
