[experimental] - dynamic metatags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="ReactJS, frontend, software engineer, web developer, portfolio">
     <meta name="author" content="Wenzie Querubin">
     <meta property="og:image" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689567401/wenziequerubin-portfolio-assets/img-link-banner_nqy6kz.png">
-    <meta property="og:url" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689567401/wenziequerubin-portfolio-assets/img-link-banner_nqy6kz.png" /> -->
+    <meta property="og:url" content="https://res.cloudinary.com/wenzie12sg/image/upload/v1689567401/wenziequerubin-portfolio-assets/img-link-banner_nqy6kz.png" />
     <meta name="theme-color" content="#b12a29">
     <meta property="og:type" content="website" />
 
